--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,8 @@ services:
   - type: web
     name: media-downloader
     env: python
-    buildCommand: pip install -r requirements.txt && apt-get update && apt-get install -y ffmpeg
-    startCommand: gunicorn app:app
-    plan: free
+    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt && apt-get update && apt-get install -y ffmpeg"
+    startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT --timeout 120"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
