--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ services:
     name: media-downloader
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT --timeout 300 --workers 1 --log-level debug"
+    startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT --timeout 300 --workers 1"
